fix header spacing on products pages

--- a/assets/sass/pages/_products-rancher-2-5.scss
+++ b/assets/sass/pages/_products-rancher-2-5.scss
@@ -1,9 +1,3 @@
-@media (min-width: 768px) {
-    .products header {
-    position: relative;
-  }
-}
-
 .rancher-2_5-hero {
     &.bg-primary {
       color: white;
