--- a/assets/sass/pages/_products.scss
+++ b/assets/sass/pages/_products.scss
@@ -1,6 +1,3 @@
-.products .main>header {
-    position: relative;
-}
 .text-center-sm {
     @media (max-width: 768px) {
         text-align: center;
